--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!--
-    Mandelbroot Experiment
+    Mandelbrot Experiment
 
     Created By: Anderson Bucchianico
           Date: 30/dec/2020
@@ -24,9 +24,13 @@
                 <label>Y</label>
                 <input type="number" class="default-input default-border" id="number-y" value="0.0" step="0.01" min="-1" max="1" />
                 <label>C</label>
-                <input type="number" class="default-input default-border" id="number-y" value="0.0" step="0.01" min="-1" max="1" />
+                <input type="number" class="default-input default-border" id="addNumber" value="0.0" step="0.01" min="-1" max="1" />
+                <label>Max Iterations</label>
+                <input type="number" class="default-input default-border" id="maxIterations" value="1" step="1" min="1" max="512" />
+                <!-- <label>Execute on Input change</label>
+                <input type="checkbox" checked/> -->
             </div>
-            <button class="default-button default-border" id="goButton" >Execute</button>
+            <!-- <button class="default-button default-border" id="goButton" >Execute</button> -->
         </section>
 
         <div class="container">
