--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
-<!--
-    Mandelbrot Experiment
+<!-- 
 
-    Created By: Anderson Bucchianico
-          Date: 30/dec/2020
-          Type: Experimental Software
--->
+    Mandelbrot Experiment
+    Created by Anderson Bucchianico @ 2020 - 2022.
+    Licensed by General Public License v3
+
+    See https://www.gnu.org/licenses/gpl-3.0.en.html for more details.
+    Thank you.
+
+ -->
 
 <!DOCTYPE html>
 <html lang="en">
@@ -18,64 +21,55 @@
 
     <body>
 
-        <section class="control-panel default-border">
-            <div style="display:none">
-                <label>Resolution in pixels</label>
-                <input type="number" class="default-input default-border"
+        <section class="control-panel">
+            <div>
+                <label>Resolution</label>
+                <input type="number" class="default-input"
                     id="canvasResolution" value="1024" step="1" min="32" max="8192"
                 />
             </div>
             <div>
                 <label>Max Iterations</label>
-                <input type="number" class="default-input default-border" 
-                    id="maxIterations" value="100" step="1" min="1" max="512"
+                <input type="number" class="default-input" 
+                    id="maxIterations" value="1000" step="1" min="1" max="512"
                 />
             </div>
             <div>
                 <label>Zoom</label>
-                <input type="number" class="default-input default-border"
+                <input type="number" class="default-input"
                     id="zoom" value="2" step="0.001" min="0.0001" max="32"
                 />
             </div>
             <div>
                 <label>Point to Pixel Ratio</label>
-                <input type="number" class="default-input default-border"
-                    id="ratio" value="3" step="0.001" min="0.0001" max="32"
+                <input type="number" class="default-input"
+                    id="ratio" value="2" step="0.001" min="0.0001" max="32"
                 />
             </div>
             <div>
-                <label>Use 1:1 point to pixel Ratio</label>
-                <input type="checkbox" class="default-input default-border"
+                <label>1:1 point to pixel Ratio</label>
+                <input type="checkbox" class="default-input"
                     id="use1to1ratio"
                 />
-            </div> 
+            </div>
             <div>
                 <label>Coordinate X</label>
-                <input type="number" class="default-input default-border"
-                    id="rendX" value="0" step="0.01" min="-2" max="2"
+                <input type="number" class="default-input"
+                    id="rendX" value="-0.5" step="0.01" min="-2" max="2"
                 />
             </div>
             <div>
                 <label>Coordinate Y</label>
-                <input type="number" class="default-input default-border"
+                <input type="number" class="default-input"
                     id="rendY" value="0" step="0.01" min="-2" max="2"
                 />
             </div>
             <div>
-                <button id="executeButton" class="default-button default-border">
-                    Execute
-                </button>
-            </div>
-            <div>
-                <button id="showConsole" class="default-button default-border">
-                    Show/Hide Console
-                </button>
+                <button id="executeButton" class="default-button"></button>
             </div>
         </section>
         
         <comp-canvascontainer></comp-canvascontainer>
-
-        <comp-console></comp-console>
         
         <script type="module" src="main.js"></script>
     </body>
